--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <header>
             <div class="logo-d"><img src="/resource/logo.png" alt=""></div>
             <ul>
-                <li><a href="default.asp">Home</a></li>
-                <li><a href="news.asp">News</a></li>
-                <li><a href="contact.asp">Contact</a></li>
-                <li><a href="about.asp">About</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Featutes</a></li>
+                <li><a href="#">Process</a></li>
+                <li><a href="#">Contact  Process</a></li>
               </ul>
-              <div class="button-g">Get Started</div>
+              <div class="button-g bt">Get Started</div>
         </header>
         <!-- content 1 -->
         <section id="content1">
@@ -31,8 +31,8 @@
                 <h1>Seamlessly, Securely.</h1>
                 <p class="c1p">Convert your crypto currencies to cash with our secure network today, hassle free.</p>
                 <div class="bc1">
-                    <div class="gets">Get started</div>
-                    <div class="lears">
+                    <div class="gets bt">Get started</div>
+                    <div class="lears  bt">
                         <p>Learn More</p>
                         <img src="\resource\arrowl.svg" alt="">
                     </div>
@@ -40,6 +40,17 @@
             </div>
             <div class="c2">
                 <img src="resource/img1.svg" alt="">
+            </div>
+        </section>
+        <!-- brands Binance Bitcoin Etheruem....  -->
+        <section id="brands">
+            <div class="brands-logo">
+                <img src="resource/bitcoin.svg" alt="">
+                <img src="resource/monero.svg" alt="">
+                <img src="resource/binance.svg" alt="">
+                <img src="resource/ethereum.svg" alt="">
+                <img src="resource/tron.svg" alt="">
+                <img src="resource/ripple.svg" alt="">
             </div>
         </section>
     </div>
