--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Featutes</a></li>
                 <li><a href="#">Process</a></li>
-                <li><a href="#">Contact  Process</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
               <div class="button-g bt">Get Started</div>
         </header>
