--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                 <img src="resource/ripple.svg" alt="">
             </div>
         </section>
+        <!-- content 2 -->
+        <section id="content2">
+            <img src="resource/stars.svg" alt="">
+            <h2>We make crypto exchanging easy.</h2>
+            <p>Specific cryptocurrencies work and get a bit of  crypto to try out for yourself. Here are a few reasons why you should choose besnik crypto</p>
+        </section>
     </div>
 </body>
 </html>
