--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
             <h2>We make crypto exchanging easy.</h2>
             <p>Specific cryptocurrencies work and get a bit of  crypto to try out for yourself. Here are a few reasons why you should choose besnik crypto</p>
         </section>
+        <!-- content 3 -->
+        <section id="content3">
+            <div class="c3-box">
+                <div class="img3"><img src="resource/c3p.svg" alt=""></div>
+                <h2>No Sign Up / KYC</h2>
+                <p>Remain anonymous while exchanging your crypto with fastcash, we don’t require any personal information.</p>
+            </div>
+            <div class="c3-box">
+                <div class="img3"><img src="resource/archive.svg" alt=""></div>
+                <h2>24/7 Support</h2>
+                <p>Got any questions in mind? Our team is active 24/7, don’t hestitate to reach out to us. We will be more than happy to assist.</p>
+            </div>
+            <div class="c3-box">
+                <div class="img3"><img src="resource/trade.svg" alt=""></div>
+                <h2>+30 Supported Currencies</h2>
+                <p>We support more than 30 crypto currencies that you can exchange and receive cash for securely & seamlessly.</p>
+            </div>
+        </section>
     </div>
 </body>
 </html>
