--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <!-- brands Binance Bitcoin Etheruem....  -->
         <section id="brands">
             <div class="brands-logo">
+                <!-- logo of brands  -->
                 <img src="resource/bitcoin.svg" alt="">
                 <img src="resource/monero.svg" alt="">
                 <img src="resource/binance.svg" alt="">
@@ -61,20 +62,55 @@
         </section>
         <!-- content 3 -->
         <section id="content3">
+            <!-- box 1 -->
             <div class="c3-box">
                 <div class="img3"><img src="resource/c3p.svg" alt=""></div>
                 <h2>No Sign Up / KYC</h2>
                 <p>Remain anonymous while exchanging your crypto with fastcash, we don’t require any personal information.</p>
             </div>
+            <!-- box 2 -->
             <div class="c3-box">
                 <div class="img3"><img src="resource/archive.svg" alt=""></div>
                 <h2>24/7 Support</h2>
                 <p>Got any questions in mind? Our team is active 24/7, don’t hestitate to reach out to us. We will be more than happy to assist.</p>
             </div>
+            <!-- box 3 -->
             <div class="c3-box">
                 <div class="img3"><img src="resource/trade.svg" alt=""></div>
                 <h2>+30 Supported Currencies</h2>
                 <p>We support more than 30 crypto currencies that you can exchange and receive cash for securely & seamlessly.</p>
+            </div>
+        </section>
+        <!-- content 4  -->
+        <section id="content4">
+            <div class="c4-1">
+                <img src="resource/stars.svg" alt="">
+                <h2>How It works?</h2>
+                <p class="c4-1pa">Exchange over 30 crypto currencies to cash in 3 easy steps.</p>
+                <div class="c4-1-b">
+                    <img src="resource/profile4.svg" alt="">
+                    <div class="c4-1-b2">
+                        <h2>Enter your information</h2>
+                        <p>Submit your information and choose the amount of crypto you wanna exchange.</p>
+                    </div>
+                </div>
+                <div class="c4-1-b">
+                    <img src="resource/bitcoin4.svg" alt="">
+                    <div class="c4-1-b2">
+                        <h2>Pay in crypto</h2>
+                        <p>Pay the amount you wanna exchange to cash via crypto the +30 supported coins.</p>
+                    </div>
+                </div>
+                <div class="c4-1-b">
+                    <img src="resource/profile4.svg" alt="">
+                    <div class="c4-1-b2">
+                        <h2>Receive Tracking</h2>
+                        <p>After your order is processed, you will receive tracking in your email within 24hrs.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="c4-2">
+                <img src="resource/img2.svg" alt="">
             </div>
         </section>
     </div>
