--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
                 <img src="resource/img2.svg" alt="">
             </div>
         </section>
+        <section id="content5">
+            <div class="text5">
+                <h2>Exchange your crypto to cash in </h2>
+                <h2 id="text5ed">3 easy steps.</h2>
+            </div>
+            <div class="button5">
+                <h3>Exchange Now</h3>
+                <img src="resource/arrowl.svg" alt="">
+            </div>
+        </section>
     </div>
 </body>
 </html>
