--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <img src="resource/img2.svg" alt="">
             </div>
         </section>
+        <!-- content 5 -->
         <section id="content5">
             <div class="text5">
                 <h2>Exchange your crypto to cash in </h2>
@@ -123,6 +124,15 @@
                 <img src="resource/arrowl.svg" alt="">
             </div>
         </section>
+        <!-- footer -->
+        <footer>
+            <hr>
+            <div class="footerl">
+                <img src="resource/logo.png" alt="">
+                <p>Copyright © 2022 FASTCASH | All Rights Reserved </p>
+            </div>
+        </footer>
+
     </div>
 </body>
 </html>
