--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -119,7 +122,7 @@
                 <h2>Exchange your crypto to cash in </h2>
                 <h2 id="text5ed">3 easy steps.</h2>
             </div>
-            <div class="button5">
+            <div class="button5 bt">
                 <h3>Exchange Now</h3>
                 <img src="resource/arrowl.svg" alt="">
             </div>
