--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="logo-d"><img src="/resource/logo.png" alt=""></div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Featutes</a></li>
+                <li><a href="#">Features</a></li>
                 <li><a href="#">Process</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
