after and before

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
                 <img src="resource/stars.svg" alt="">
                 <h2>How It works?</h2>
                 <p class="c4-1pa">Exchange over 30 crypto currencies to cash in 3 easy steps.</p>
-                <div class="c4-1-b">
+                <div class="c4-1-b c4-1-b-d">
                     <img src="resource/profile4.svg" alt="">
                     <div class="c4-1-b2">
                         <h2>Enter your information</h2>
                         <p>Submit your information and choose the amount of crypto you wanna exchange.</p>
                     </div>
                 </div>
-                <div class="c4-1-b">
+                <div class="c4-1-b c4-1-b-d">
                     <img src="resource/bitcoin4.svg" alt="">
-                    <div class="c4-1-b2">
+                    <div class="c4-1-b2 ">
                         <h2>Pay in crypto</h2>
                         <p>Pay the amount you wanna exchange to cash via crypto the +30 supported coins.</p>
                     </div>
