--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <section id="content1">
             <div class="c1">
                 <h2>Swap your Crypto to Cash.</h2>
+                <img class="imgcash" src="resource/line.svg" alt="">
                 <h1>Seamlessly, Securely.</h1>
                 <p class="c1p">Convert your crypto currencies to cash with our secure network today, hassle free.</p>
                 <div class="bc1">
