--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <header>
             <div class="logo-d"><img src="/resource/logo.png" alt=""></div>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Process</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
               <div class="button-g bt">Get Started</div>
         </header>
