--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
                     <img src="resource/c-msg.svg" alt="">
                     <textarea class="form-i form-in form-in2" type="text" name="" id="message-form" placeholder="Write your message"></textarea> 
                 </div>
-                <input id="submit-form" type="submit" value="Send Message">
+                <input class="bt" id="submit-form" type="submit" value="Send Message">
             </form>
             <div class="sizer"></div>
         </section>
