--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- container -->
     <div class="container">
         <header>
-            <div class="logo-d"><img src="/resource/logo.png" alt=""></div>
+            <div class="logo-d"><img src="resource/logo.png" alt=""></div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Features</a></li>
@@ -39,7 +39,7 @@
                     <div class="gets bt">Get started</div>
                     <div class="lears  bt">
                         <p>Learn More</p>
-                        <img src="\resource\arrowl.svg" alt="">
+                        <img src="resource\arrowl.svg" alt="">
                     </div>
                 </div>
             </div>
