--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <!-- container -->
     <div class="container">
         <header>
-            <div class="logo-d"><img src="/resource/logo.png" alt=""></div>
+            <div class="logo-d"><img src="resource/logo.png" alt=""></div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Features</a></li>
