--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <section id="brands">
             <div class="brands-logo">
                 <!-- logo of brands  -->
-                <img src="resource/bitcoin.svg" alt="">
-                <img src="resource/monero.svg" alt="">
-                <img src="resource/binance.svg" alt="">
-                <img src="resource/ethereum.svg" alt="">
-                <img src="resource/tron.svg" alt="">
-                <img src="resource/ripple.svg" alt="">
+                <img class="logo-b" src="resource/bitcoin.svg" alt="">
+                <img class="logo-b" src="resource/monero.svg" alt="">
+                <img class="logo-b" src="resource/binance.svg" alt="">
+                <img class="logo-b" src="resource/ethereum.svg" alt="">
+                <img class="logo-b" src="resource/tron.svg" alt="">
+                <img class="logo-b" src="resource/ripple.svg" alt="">
             </div>
         </section>
         <!-- content 2 -->
