--- a/index.html
+++ b/index.html
@@ -19,47 +19,51 @@
 <body>
     <!-- container -->
     <div class="container">
-        <header>
-            <div class="logo-d"><img src="resource/logo.png" alt=""></div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Process</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-              <div class="button-g bt">Get Started</div>
-        </header>
-        <!-- content 1 -->
-        <section id="content1">
-            <div class="c1">
-                <h2>Swap your Crypto to Cash.</h2>
-                <img class="imgcash" src="resource/line.svg" alt="">
-                <h1>Seamlessly, Securely.</h1>
-                <p class="c1p">Convert your crypto currencies to cash with our secure network today, hassle free.</p>
-                <div class="bc1">
-                    <div class="gets bt">Get started</div>
-                    <div class="lears  bt">
-                        <p>Learn More</p>
-                        <img src="resource\arrowl.svg" alt="">
+        <div class="backround-c">
+            <header>
+                <div class="logo-d"><img src="resource/logo.png" alt=""></div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Process</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                  </ul>
+                  <div class="button-g bt">Get Started</div>
+            </header>
+            <!-- content 1 -->
+            <section id="content1">
+                <div class="c1">
+                    <h2>Swap your Crypto to Cash.</h2>
+                    <img class="imgcash" src="resource/line.svg" alt="">
+                    <h1>Seamlessly, Securely.</h1>
+                    <p class="c1p">Convert your crypto currencies to cash with our secure network today, hassle free.</p>
+                    <div class="bc1">
+                        <div class="gets bt">Get started</div>
+                        <div class="lears  bt">
+                            <p>Learn More</p>
+                            <img src="resource\arrowl.svg" alt="">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="c2">
-                <img src="resource/img1.svg" alt="">
-            </div>
-        </section>
-        <!-- brands Binance Bitcoin Etheruem....  -->
-        <section id="brands">
-            <div class="brands-logo">
-                <!-- logo of brands  -->
-                <img class="logo-b" src="resource/bitcoin.svg" alt="">
-                <img class="logo-b" src="resource/monero.svg" alt="">
-                <img class="logo-b" src="resource/binance.svg" alt="">
-                <img class="logo-b" src="resource/ethereum.svg" alt="">
-                <img class="logo-b" src="resource/tron.svg" alt="">
-                <img class="logo-b" src="resource/ripple.svg" alt="">
-            </div>
-        </section>
+                <div class="c2">
+                    <img src="resource/img1.svg" alt="">
+                </div>
+            </section>
+            <!-- brands Binance Bitcoin Etheruem....  -->
+            <section id="brands">
+                <div class="brands-logo">
+                    <!-- logo of brands  -->
+                    <img class="logo-b" src="resource/bitcoin.svg" alt="">
+                    <img class="logo-b" src="resource/monero.svg" alt="">
+                    <img class="logo-b" src="resource/binance.svg" alt="">
+                    <img class="logo-b" src="resource/ethereum.svg" alt="">
+                    <img class="logo-b" src="resource/tron.svg" alt="">
+                    <img class="logo-b" src="resource/ripple.svg" alt="">
+                </div>
+            </section>
+        </div>
+        
+        
         <!-- content 2 -->
         <section id="content2">
             <img src="resource/stars.svg" alt="">
