--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <!-- content 1 -->
             <section id="content1">
                 <div class="c1">
-                    <h2>Swap your Crypto to Cash.</h2>
+                    <div class="textcash">
+                        <h2>Swap your Crypto to&nbsp;</h2>
+                        <h2 class="cash">Cash.</h2>
+                    </div>
                     <img class="imgcash" src="resource/line.svg" alt="">
                     <h1>Seamlessly, Securely.</h1>
                     <p class="c1p">Convert your crypto currencies to cash with our secure network today, hassle free.</p>
