--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <div class="container">
         <header>
             <div class="logo-d"><img src="resource/logo.png" alt=""></div>
-            <ul>
+            <ul class="li">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Process</a></li>
