--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="backround-c">
             <header>
                 <div class="logo-d"><img src="resource/logo.png" alt=""></div>
-                <ul>
+                <ul class="li">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Process</a></li>
