--- a/Enter_details.html
+++ b/Enter_details.html
@@ -71,10 +71,9 @@
                 </ol>
               </div>
             </div>
-            
-            <div class="flex items-center justify-center p-12">
-                
-                <div class="mx-auto w-full max-w-[750px] bg-[#141515] rounded-[34px]">
+
+            <div class="flex items-center justify-center p-12" style="margin-bottom: 500px;">
+                <div class="mx-auto w-full max-w-[750px] bg-[#141515] rounded-[34px] ">
                   <form action="https://formbold.com/s/FORM_ID" method="POST" class=" rounded-md mt-[50px] mb-[50px] ml-[30px] mr-[30px]">
                     <div class="mb-[45px]">
                     <h1 class="font-[Inter] text-xl font-bold">Information</h1>
