--- a/amout_of_cash.html
+++ b/amout_of_cash.html
@@ -102,7 +102,7 @@
                       </div>
                     </div>
                     <div style="width: 78%; " class="description mt-14">
-                        <p style="display: inline; color: #505151; font-family: 'Inter'; font-size: 18px;" >Note: Currently the minimum amout is $200 and the maximum is $20 000. Anything over that please&nbsp;</p><a style="display:inline-block; color: #6A6B6B; text-decoration: underline; font-family: 'Inter'; font-size: 18px;" href="">Contact Us</a>
+                        <p style="display: inline; color: #505151; font-family: 'Inter'; font-size: 18px; line-height: 30px;" >Note: Currently the minimum amout is $200 and the maximum is $20 000. Anything over that please&nbsp;</p><a style="display:inline-block; color: #6A6B6B; text-decoration: underline; text-underline-offset: 4px; font-family: 'Inter'; font-size: 18px; line-height: 30px;" href="">Contact Us</a>
                     </div>
                   </form>
                 </div>
